# time_tracker

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  readme.md
.github/actions/setup-rust-env/: action.yml
.github/workflows/: development.yaml  release.yaml
src/: arguments.rs  main.rs
src/commands/: go.rs  mod.rs  pause.rs  status.rs  stop.rs
src/data/: datamodel.rs  glyphs.rs  mod.rs
src/storage/: configuration.rs  editor.rs  fileio.rs  legacy.rs  mod.rs
src/tracking_logic/: actions.rs  date_resolver.rs  formatting.rs  mod.rs  storage.rs  task_actions.rs  timer.rs
src/tui/: app_state.rs  mod.rs  rendering.rs  term_interaction.rs
src/tui/rendering/: actions.rs  feedback.rs  mod.rs  status.rs  task_editor.rs  task_indicators.rs  toggles.rs
src/tui/smartcard/: mod.rs  pcsclib.rs  state.rs  watch_process.rs
