[package]
name = "time-tracker-cli"
version = "0.2.1"
edition = "2024"
description = "Simple Time Tracking TUI and CLI"
readme = "readme.md"
repository = "https://github.com/HBDE-work/time_tracker/tree/master"
license = "MIT"
keywords = ["cli", "time", "tracker"]
categories = ["command-line-utilities"]

[[bin]]
name = "tracker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
libloading = "0.9"
